--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -11,4 +11,4 @@ db:
         POSTGRES_PASSWORD: postgres
         PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
-        - "/data/postgres:/var/lib/postgresql/data"
+        - "/tmp/postgres:/var/lib/postgresql/data"
